# scikeras

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  AUTHORS.rst  CITATION.cff  CNAME  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _config.yml  index.html  latest  mkdocs.yml  pyproject.toml  redirect.js  ref.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  stable  tox.ini  update_versions.py  versions.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_docs.yaml  deploy_docs.yml  docs.yaml  release.yaml  run_tests_os.yaml  run_tests_tf.yaml  tests.yaml
docs/: Makefile  README.md  api.md  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst  wrappers.md
docs/site/: 404.html  index.html
docs/site/api/: index.html
docs/site/contributing/: index.html
docs/site/faq/: index.html
docs/site/quickstart/: index.html
docs/site/search/: search_index.json
docs/site/wrappers/: index.html
docs/source/: advanced.rst  api.rst  conf.py  index.rst  install.rst  migration.rst  quickstart.rst  tutorials.rst  wrappers.rst
docs/source/_static/: custom.css
docs/source/_templates/: class.rst
docs/source/notebooks/: AutoEncoders.md  Autoencoders.ipynb  Basic_Usage.ipynb  Basic_Usage.md  Benchmarks.ipynb  Benchmarks.md  DataTransformers.ipynb  DataTransformers.md  MLPClassifier_MLPRegressor.ipynb  MLPClassifier_MLPRegressor.md  Meta_Estimators.ipynb  Meta_Estimators.md  sparse.md
docs/source/templates/: class.rst
notebooks/: Autoencoders.ipynb  Basic_Usage.ipynb  Benchmarks.ipynb  DataTransformers.ipynb  MLPClassifier.ipynb  MLPClassifier_MLPRegressor.ipynb  Meta_Estimators.ipynb  Transfer_Learning.ipynb
refs/heads/master/: .buildinfo  advanced.html  api.html  genindex.html  index.html  install.html  migration.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  tutorials.html
refs/heads/master/.doctrees/: environment.pickle
refs/heads/master/_sources/: migration.rst.txt  quickstart.rst.txt
refs/heads/master/_static/: basic.css  documentation_options.js  insipid-sidebar.js  insipid.css
refs/heads/master/notebooks/: AutoEncoders.html  AutoEncoders.ipynb  Basic_Usage.html  Basic_Usage.ipynb  Benchmarks.html  Benchmarks.ipynb  DataTransformers.html  DataTransformers.ipynb  MLPClassifier_MLPRegressor.html  MLPClassifier_MLPRegressor.ipynb  Meta_Estimators.html  Meta_Estimators.ipynb  sparse.html  sparse.ipynb
refs/pull/165/merge/: migration.html  objects.inv  searchindex.js
refs/pull/166/merge/: install.html  searchindex.js
refs/pull/167/merge/: advanced.html  genindex.html  objects.inv  search.html  searchindex.js
refs/pull/174/merge/: advanced.html  searchindex.js
refs/pull/176/merge/: searchindex.js
refs/pull/177/merge/: index.html  objects.inv  searchindex.js  tutorials.html
refs/pull/178/merge/: quickstart.html  searchindex.js
refs/pull/179/merge/: searchindex.js
refs/pull/180/merge/: .buildinfo  genindex.html  searchindex.js
refs/pull/182/merge/: searchindex.js
refs/pull/183/merge/: index.html  install.html  objects.inv  searchindex.js
refs/pull/184/merge/: searchindex.js
refs/pull/185/merge/: py-modindex.html  searchindex.js
refs/pull/186/merge/: searchindex.js
refs/pull/189/merge/: api.html  quickstart.html  searchindex.js  tutorials.html
refs/pull/190/merge/: searchindex.js
refs/pull/191/merge/: searchindex.js
refs/pull/192/merge/: install.html  searchindex.js
refs/pull/193/merge/: searchindex.js
refs/pull/194/merge/: migration.html  objects.inv  searchindex.js
refs/pull/195/merge/: searchindex.js
refs/pull/197/merge/: .buildinfo  searchindex.js
refs/pull/198/merge/: migration.html  searchindex.js
refs/tags/v0.11.0/: py-modindex.html  search.html  searchindex.js
refs/tags/v0.11.1/: advanced.html  api.html  install.html  migration.html  py-modindex.html  searchindex.js
refs/tags/v0.12.0/: .buildinfo  genindex.html  objects.inv  searchindex.js
refs/tags/v0.13.0/: searchindex.js
refs/tags/v0.2.2-alpha.0/: genindex.html  migration.html  objects.inv  py-modindex.html  searchindex.js
refs/tags/v0.3.0/: api.html  searchindex.js
refs/tags/v0.3.1/: advanced.html  py-modindex.html  searchindex.js
refs/tags/v0.3.2/: api.html  genindex.html  index.html  py-modindex.html  searchindex.js
refs/tags/v0.3.3/: advanced.html  api.html  searchindex.js  tutorials.html
refs/tags/v0.4.0/: search.html  searchindex.js
refs/tags/v0.4.1/: .buildinfo  api.html  genindex.html  install.html  search.html  searchindex.js
refs/tags/v0.5.1/: install.html  migration.html  objects.inv  searchindex.js
refs/tags/v0.6.0/: advanced.html  genindex.html  searchindex.js
refs/tags/v0.6.1/: .buildinfo  install.html  searchindex.js
refs/tags/v0.6.2/: api.html  search.html  searchindex.js
refs/tags/v0.7.0/: advanced.html  genindex.html  index.html  py-modindex.html  quickstart.html  search.html  searchindex.js  tutorials.html
refs/tags/v0.8.0/: advanced.html  api.html  genindex.html  index.html  install.html  migration.html  py-modindex.html  quickstart.html  search.html  searchindex.js
refs/tags/v0.9.0/: advanced.html  install.html  searchindex.js
rfcs/: 1-input-pipeline.md
scikeras/: __init__.py  _saving_utils.py  _types.py  _utils.py  utils.py  wrappers.py
scikeras/utils/: __init__.py  _transformers.py  random_state.py  transformers.py
sklearn_keras_wrap/: __init__.py  wrappers.py
tests/: __init__.py  conftest.py  mlp_models.py  multi_output_models.py  test-output.xml  test_api.py  test_basewrapper.py  test_bug.py  test_callbacks.py  test_compile_kwargs.py  test_deprecation.py  test_errors.py  test_input_output_shapes.py  test_input_outputs.py  test_loss_auto.py  test_param_routing.py  test_parameters.py  test_random_state.py  test_scikit_learn_checks.py  test_scoring.py  test_serialization.py  test_simple_usage.py  test_sklearn_keras_wrap.py  test_utils.py  test_utils_transformers.py  test_wrappers.py  testing_utils.py
(+1782 files in other folders)
