[tool.poetry]
authors = ["Adrian Garcia Badaracco <1755071+adriangb@users.noreply.github.com>"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "Scikit-Learn API wrapper for Keras."
documentation = "https://www.adriangb.com/scikeras/"
homepage = "https://github.com/adriangb/scikeras"
include = [
  "LICENSE",
]
keywords = ["keras", "tensorflow", "scikit-learn", "deep-learning", "python"]
license = "MIT"
name = "scikeras"
readme = "README.md"
repository = "https://github.com/adriangb/scikeras"
version = "0.13.0"

[tool.poetry.dependencies]
python = ">=3.9.0,<4"
scikit-learn = ">=1.4.2"
keras = ">=3.2.0"
tensorflow = { version = ">=2.16.1", optional = true }

[tool.poetry.extras]
tensorflow = ["tensorflow"]
test = ["tensorflow"]

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = ">=6.4.2"}
insipid-sphinx-theme = ">=0.3.2"
ipykernel = ">=6.15.1"
jupyter = ">=1.0.0"
jupytext = ">=1.14.0"
matplotlib = ">=3.5.2"
nbsphinx = ">=0.8.9"
numpydoc = ">=1.4.0"
pre-commit = ">=2.20.0"
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
sphinx = ">=5.0.2"
tensorflow = ">=2.16.1"
tensorflow-io-gcs-filesystem = { version = "<=0.31.0", markers = "python_version < '3.12' and sys_platform == 'win32'" }

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
    "B905",  # strict argument to zip
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.coverage.run]
source = ["scikeras/"]

[tool.coverage.report]
show_missing = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.8"]
